--- a/pinion_adverts.cfg
+++ b/pinion_adverts.cfg
@@ -1,10 +1,10 @@
 // ConVars for plugin "pinion_adverts.smx"
 
 
-// URL to access on player event
+// Prevent the MOTD from being closed for 5 seconds.
 // -
-// Default: ""
-sm_motdpagehit_url "http://log.pinion.gg/tracking/COMMUNITY/GAME"
+// Default: "1"
+sm_motdredirect_force_min_duration "1"
 
 // Target URL to write into motdfile
 // -
